# ai-mvp

./: .gitignore  .pre-commit-config.yaml  _ai_mvp.py  pyproject.toml
.github/workflows/: pre-commit.yaml
